# virtualdreams

./: .dockerignore  .env.example  .gitignore  .travis.yml  AGENTS.md  Aptfile  CACHING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Gemfile  MEMORY_MANAGEMENT.md  MODERNIZATION.md  Procfile  Procfile_updated  README.md  TODO.md  cache_manager.py  compose.yaml  docker-compose.yml  justfile  memory_utils.py  pyproject.toml  requirements.txt  requirements_modern.txt  test_chorus.py  test_chorus_isolated.py  test_memory.py  test_setup.py  vapor.py  vapor_modern.py
.github/: copilot-instructions.md
chorus-detector/: Cargo.toml  SKILL.md
chorus-detector/src/: main.rs
docs/: index.html  style.css
docs/plans/: 2026-03-30-modernization-design.md  2026-03-30-modernization-plan.md
src/virtualdreams/: main.py
src/virtualdreams/api/: SKILL.md  routes.py
src/virtualdreams/jobs/: SKILL.md  manager.py  models.py
src/virtualdreams/pipeline/: SKILL.md  chorus.py  download.py  effects.py  upload.py
src/virtualdreams/static/: index.html
tests/: test_job_manager.py  test_job_models.py  test_pipeline_chorus.py  test_pipeline_download.py  test_pipeline_effects.py  test_pipeline_orchestrator.py  test_pipeline_upload.py  test_routes.py
